Security/01-PeerAuthentication-Policy-Basics/03-destinationrule-demoapp-mtls.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: demoapp
spec:
  host: demoapp
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v2
    labels:
      version: v2.1
  - name: v2-canary
    labels:
      version: v2.1-canary
